# architectury-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: post-release.yml  release-notes.py
src/: main.rs  web.rs
src/commands/: list.rs  new.rs
