[package]
name = "architectury-cli"
description = "Command-line tool for creating Architectury projects"
authors = ["SpatialParadox <notparadox04@gmail.com>"]
license = "MIT"
repository = "https://github.com/SpatialParadox/architectury-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="{{version}}", replace="{{version}} - {{date}}", exactly=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased]\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/cargo-release/compare/{{tag_name}}...HEAD", exactly=1},
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tempfile = "3.3.0"
zip = "0.6.2"

[profile.release]
# From https://github.com/johnthagen/min-sized-rust
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"