[package]
name = "architectury"
description = "Command-line tool for creating Architectury projects"
authors = ["SpatialParadox <notparadox04@gmail.com>"]
license = "MIT"
repository = "https://github.com/SpatialParadox/architectury-cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.6", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
owo-colors = "3.5.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
zip = "0.6.2"

[profile.release]
# See https://github.com/johnthagen/min-sized-rust
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"
